2018-09-02  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Switch Travis CI to R 3.5 repo

2017-06-12  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars (CXX_STD): Now a C++14 package

	* src/RcppExports.cpp: Recreated under Rcpp 0.12.11
	* R/RcppExports.R: Ditto

	* DESCRIPTION (Date): Updated

2017-03-04  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Added, with g++-6 as default for C++14

2017-03-03  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added

2017-03-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Initial version

	* DESCRIPTION (SystemRequirements): Note C++14 requirement,
	mention optional PAPI library
